--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -36,6 +36,15 @@ body {
   color: var(--text-color);
 }
 
+input {
+	border: none;
+	padding: 0 20px;
+	height: 35px;
+	border-radius: 20px;
+	font-size: functions.toRem(14);
+	color: var(--medium-gray);
+}
+
 h1,
 h2,
 h3,
@@ -139,4 +148,18 @@ a {
 		-webkit-box-orient: vertical;
 		overflow: hidden;
 	}
+}
+
+::-webkit-scrollbar {
+  width: 0.5em;
+}
+ 
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+}
+ 
+::-webkit-scrollbar-thumb {
+  background-color: darkgrey;
+  outline: 1px solid slategrey;
+	border-radius: 50px;
 }
